trunk/Archive2/74/64778f665d000b/output
main.cpp: In function 'int main()':
main.cpp:24:3: error: static assertion failed: my_e_e1::value != my_e::e2
   static_assert(my_e_e1::value == my_e::e2,
   ^
